fix(data-form): show toggle password visibility button

--- a/src/theme/shared.scss
+++ b/src/theme/shared.scss
@@ -40,7 +40,7 @@
   p {
     margin: 0;
   }
-  p+p {
+  p + p {
     margin-top: 1em;
   }
 }
@@ -48,7 +48,7 @@
 .background-image {
   background: transparent !important;
   &::before {
-    content: "";
+    content: '';
     position: fixed;
     width: 100%;
     height: 100%;
@@ -74,8 +74,8 @@
 
 .content.transparent {
   &,
-  >.fixed-content,
-  >.scroll-content {
+  > .fixed-content,
+  > .scroll-content {
     background: transparent !important;
   }
 }
@@ -84,19 +84,19 @@
 .content.background-abstract {
   $active-opacity: 0.95;
   $disabled-opacity: 0.7;
-  .button:not([color]) {
+  .button:not([color]):not([clear]) {
     background-color: rgba(color($colors, primary), $active-opacity);
   }
-  .button[color="secondary"] {
+  .button[color='secondary'] {
     background-color: rgba(color($colors, secondary), $active-opacity);
   }
   button[disabled],
   [ion-button][disabled] {
     opacity: 1;
-    &.button:not([color]) {
+    &.button:not([color]):not([clear]) {
       background-color: rgba(color($colors, primary), $disabled-opacity);
     }
-    &.button[color="secondary"] {
+    &.button[color='secondary'] {
       background-color: rgba(color($colors, secondary), $disabled-opacity);
     }
   }
@@ -126,7 +126,7 @@
   background: rgba(white, $opacity);
   overflow: hidden;
 
-  @supports(backdrop-filter: blur(4px)) {
+  @supports (backdrop-filter: blur(4px)) {
     background: rgba(white, $blurred-opacity);
     backdrop-filter: blur(4px);
   }
